--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       Tribute to Nicola Tesla
     </p>
     <div class="box">
-      <img class="pic" src="thumbnails/Screenshot 2026-02-21 201737.png">
+      <img class="pic" src="thumbnails/Screenshot2026-02-21 201737.png">
       <p Class="downpic">
       The Man Who Invented the Twentieth Century
     </p>
@@ -169,3 +169,4 @@ Although radio is often credited to
     </div>
   </body>
 </html>
+
